testdata/baselines/reference/submodule/compiler/jsdocReferenceGlobalTypeInCommonJs.errors.txt
a.js(2,12): error TS8010: Type annotations can only be used in TypeScript files.
a.js(4,1): error TS2686: 'Puppeteer' refers to a UMD global, but the current file is a module. Consider adding an import instead.


==== a.js (2 errors) ====
    const other = require('./other');
    /** @type {Puppeteer.Keyboard} */
               ~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    var ppk;
    Puppeteer.connect;
    ~~~~~~~~~
!!! error TS2686: 'Puppeteer' refers to a UMD global, but the current file is a module. Consider adding an import instead.
==== puppet.d.ts (0 errors) ====
    export as namespace Puppeteer;
    export interface Keyboard {
        key: string
    }
    export function connect(name: string): void;
    
==== other.d.ts (0 errors) ====
    declare function f(): string;
    export = f;
    